--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!-- ucoban.github.io -->
 <html>
 <head>
+<meta charset="ISO-8859-1">
 <title> HW6-part- Üsame Çoban - 141044068</title>
 </head>
 <body style="background-color:lightgrey">
@@ -15,10 +17,10 @@
 <br>
 <br>
 
-<table align="center">
+<table>
  <tr>
 <td><img src="http://nighthacks.com/roller/jag/resource/JAG2001.jpg" style="width:336px;height:503px;"></td>
-<td><img src="https://upload.wikimedia.org/wikipedia/commons/1/14/James_Gosling_2008.jpg" style="width:493px;height:498px;"</td>
+<td align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/1/14/James_Gosling_2008.jpg" style="width:493px;height:498px;"</td>
  </tr>
  <tr>
 <td style="font-size:130%"><center><b>Figure 1</b> : James Gosling<center></td>
@@ -30,7 +32,7 @@
 <br>
 <br>
 <h2 style="font-size:300%"> 2- Career Life</h2>
-<p style="font-size:230%">He was interested almost all kind of softwares such as ground analysis, ISIS 2 satellite and of course Unix Emacs... Previous to join Sun Microsystems, multi-processor version of Unix was built by Gosling. Then, he joined Sun Microsystems. He had indescribable years at Sun Microsystems where he worked as a VP & Fellow. While working there people called him “Father of the java” cause he is the unique developer of the java programming language. He created java programming language, which is now one of the fastest and making progress devices for the web, at Sun. In the beginning his work was leader of the NeWS window system. He spent years there and while at Sun M. he built several compilers, mail systems, window managers and a WYSIWYG text editor. He stayed Sun Microsystems until 2 April 2010. Low of pay, decision skill, chancing of role, status and ethical challenges were his mention about why he left. He worked momentarily for Oracle with experiences that he gained from Sun. After that he worked at Google. After leaving Google he joined Liquid Robotics, which makes data collecting ocean robots, as their leader Software Architect. </p>
+<p style="font-size:230%">He was interested almost all kind of softwares such as ground analysis, ISIS 2 satellite and of course Unix Emacs... Previous to join Sun Microsystems, multi-processor version of Unix was built by Gosling. Then, he joined Sun Microsystems. He had indescribable years at Sun Microsystems where he worked as a VP & Fellow. While working there people called him &#34;Father of the java&#34; cause he is the unique developer of the java programming language. He created java programming language, which is now one of the fastest and making progress devices for the web, at Sun. In the beginning his work was leader of the NeWS window system. He spent years there and while at Sun M. he built several compilers, mail systems, window managers and a WYSIWYG text editor. He stayed Sun Microsystems until 2 April 2010. Low of pay, decision skill, chancing of role, status and ethical challenges were his mention about why he left. He worked momentarily for Oracle with experiences that he gained from Sun. After that he worked at Google. After leaving Google he joined Liquid Robotics, which makes data collecting ocean robots, as their leader Software Architect. </p>
 
 <br>
 <br>
