--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title> HW6-part- Üsame Çoban - 141044068</title>
+<title>James Gosling</title>
 </head>
 <body style="background-color:lightgrey">
 
@@ -17,10 +17,10 @@
 <br>
 <br>
 
-<table align="center">
+<table>
  <tr>
 <td><img src="http://nighthacks.com/roller/jag/resource/JAG2001.jpg" style="width:336px;height:503px;"></td>
-<td><img src="https://upload.wikimedia.org/wikipedia/commons/1/14/James_Gosling_2008.jpg" style="width:493px;height:498px;"</td>
+<td align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/1/14/James_Gosling_2008.jpg" style="width:493px;height:498px;"</td>
  </tr>
  <tr>
 <td style="font-size:130%"><center><b>Figure 1</b> : James Gosling<center></td>
